--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,39 @@
-<h1>Let's Eat!</h1>
+<div class="jumbotron" style="background-color: #ffe2a9;">
+  <h1 class="text-center" style="color: #D94730">Let's Eat (๑•̀ㅂ•́)و✧</h1>
+  <img src="https://cdn.dribbble.com/users/874431/screenshots/2283494/hamburgerday3.gif" alt="burgerPic" class="image">
+  <h2 class="text-center" style="color: #D94730">Eat-Da-Burger!</h2>
+</div>
 
-<h2>Eat-Da-Burger!</h2>
+<div class="container">
+  <div class="row">
+    <div class="col" style="color: #D94730">
+      <ul>
+        {{#each burgers}}
+        {{#unless devoured}}
+        {{> burgers/burger-block devoured=true}}
+        {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
+    <div class="col" style="color: #D94730">
+      <ul>
+        {{#each burgers}}
+        {{#if devoured}}
+        {{> burgers/burger-block devoured=false}}
+        {{/if}}
+        {{/each}}
+      </ul>
+    </div>
+  </div>
+</div>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Cats that are sleepy!</h2>
-
-<h2>Add a Cat</h2>
+<h4 class="text-center" style="color: #D94730">I want more burger</h4>
 <form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
+  <div class="form-group text-center">
+    <label for="burger" style="color: #D94730" >Burger Name:</label>
+    <input type="text" id="burger" name="name">
   </div>
 
-  <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Cat</button>
+  <button type="submit" id="submit" style="background-color: #E57A44;">Add To My List</button>
 </form>
